toml-pretty-deser/compilation_failure_tests/tagged_enum_named.stderr
error: tagged enum variant `TagA` must have exactly one unnamed field: TagA(InnerType)
 --> compilation_failure_tests/tagged_enum_named.rs:6:5
  |
6 |     TagA { field: u8},
  |     ^^^^^^^^^^^^^^^^^
